src/test/resources/dev/meanmail/inspections/geo/streamGeoWithProxy.nginx
stream {
    geo $address_variable $result_variable {
        <error descr="The 'proxy' parameter is only allowed in http context">proxy 127.0.0.1;</error>
        default 0;
        192.168.1.0/24 1;
    }
}
